Add PWA install flow and gig push notifications

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="dark">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./src/assets/img/soundwalkFavicon.jpg" />
+    <link rel="icon" type="image/jpeg" href="./src/assets/img/soundwalkFavicon.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Soundwalk - North East Cover Band</title>
   </head>
